# flatcc-meson-sample

./: .gitignore  README.md  get-meson.sh  meson.build  setup-build.sh
schema/: union_with_empty.fbs
src/: issue4.c
subprojects/: flatcc.wrap
